[package]
name = "counter"
version = "0.0.1"
authors = ["Aha Labs <team@ahalabs.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"

[profile.dev]
overflow-checks = true

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
